--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -196,7 +196,7 @@ ul li a:hover {
 								<li>
 									<div class="header-icons">
 									
-										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}" style="text-decoration: none;font-size: 20px;" >Log Out</a>
+										<a class="boxed-btn" id="login-btn" href="{% url 'LogoutUser' %}"  style="text-decoration: none;font-size: 20px;" >Log Out</a>
 									</div>
 								</li>
 							</ul>
