--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -298,7 +298,7 @@ margin-right:55%;
 								<li>
 									<div class="header-icons">
 
-										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Logout</a>
+										<a class="boxed-btn" id="login-btn" href="{% url 'LogoutUser' %}" >Logout</a>
 									</div>
 								</li>
 							</ul>
