--- a/FrontEnd/templates/contact.html
+++ b/FrontEnd/templates/contact.html
@@ -100,7 +100,7 @@
 								<li>
 									<div class="header-icons">
 									
-										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}" style="font-size: 20px;">Log Out</a>
+										<a class="boxed-btn" id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;">Log Out</a>
 									</div>
 								</li>
 							</ul>
