--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -34,6 +34,15 @@
 	<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 
 	<style>
+		.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+body img{
+  max-width: 600px;
+}
 		.games{
 			color: #fff;
 		}
